[bugfix/review] fix scrollbar to move with arrow key

--- a/laravel/public/css/common.css
+++ b/laravel/public/css/common.css
@@ -34,7 +34,7 @@ body {
   width: 100%;
 }
 
-::-webkit-scrollbar {
+::-webkit-scrollbar:not(.course-tab) {
   display: none;
 }
 
